[package]
name = "thread-delay"
description = "Implementors of DelayNs from embedded_hal, for Linux systems."
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["linux", "std", "embedded"]
categories = ["embedded"]
readme = "README.md"
repository = "https://github.com/iancohee/thread_delay"

[dependencies]
embedded-hal = "1.0.0"
